// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`course for loop over course sections 1`] = `
[
  CourseSection {
    "corequisites": "",
    "degreeLevel": "UGRD",
    "deliveryMethod": "In Person",
    "department": "cmpt",
    "departmentName": "CMPT",
    "description": "A rigorous introduction to computing science and computer programming, suitable for students who already have some background in computing science and programming.  Intended for students who will major in computing science or a related program. Topics include: memory management; fundamental algorithms; formally analyzing the running time of algorithms; abstract data types and elementary data structures; object-oriented programming and software design; specification and program correctness; reading and writing files; debugging tools; shell commands.",
    "designation": "Quantitative",
    "details": "This course is a rigorous introduction to computing science, intended primarily for students who have already taken CMPT 120 as an introduction to algorithms and programming. Students will learn fundamental concepts of computing science, basic principles of algorithm design and software development. All case studies will be presented in C and C++. Students will also learn the basic shell commands in Linux, and will learn how to run and debug their code using VS Cod
<h2 class="ParagraphTitle">Topics</h2>
<ul>
<li>Brief review of elementary programming and problem solving; introduction to C.</li>
<li>Basic shell commands in Linux</li>
<li>Running/Debugging using Visual Studio Code</li>
<li>Performance measurements; algorithm design and analysis; asymptotics; fundamental algorithms.</li>
<li>Encodings of basic types: int, unsigned, float, char, pointer.</li>
<li>The memory model: addresses, dynamic data types, safe initialization, safe cleanup, and safe arrays.</li>
<li>Good coding style; defensive coding practices; testing.</li>
<li>Recursion: simple recursion; recursion on trees; divide and conquer algorithms.</li>
<li>Reasoning about programs: assertions, invariants, and correctness.</li>
<li>Abstract data types; information hiding;</li>
<li>Elementary data structures: stacks, queues, binary trees</li>
</ul>",
    "educationalGoals": undefined,
    "gradingScheme": undefined,
    "instructors": [
      Instructor {
        "commonName": "Igor",
        "email": "ishinkar@sfu.ca",
        "firstName": "Igor",
        "lastName": "Shinkar",
        "name": "Igor Shinkar",
        "office": "",
        "officeHours": "",
        "phone": "",
        "profileUrl": "",
        "role": "PI",
      },
    ],
    "internal": {
      "number": "5198",
      "outlinePath": "2022/fall/cmpt/125/d100",
    },
    "materials": undefined,
    "name": "CMPT 125 D100",
    "notes": {
      "departmentalUndergraduateNotes": "",
      "general": "Students with credit for CMPT 126, 129, 135 or CMPT 200 or higher may not take this course for further credit.",
      "grading": "Final Exam - 35% Lab Exam - 20% Midterm Exam - 20% Homework assignments - 25%",
      "registrar": "<p><strong>ACADEMIC INTEGRITY: YOUR WORK, YOUR SUCCESS</strong></p>
<p>SFU&rsquo;s Academic Integrity website <a href="http://www.sfu.ca/students/academicintegrity.html">http://www.sfu.ca/students/academicintegrity.html</a> is filled with information on what is meant by academic dishonesty, where you can find resources to help with your studies and the consequences of cheating. Check out the site for more information and videos that help explain the issues in plain English.</p>
<p>Each student is responsible for his or her conduct as it affects the university community. Academic dishonesty, in whatever form, is ultimately destructive of the values of the university. Furthermore, it is unfair and discouraging to the majority of students who pursue their studies honestly. Scholarly integrity is required of all members of the university. <a href="http://www.sfu.ca/policies/gazette/student/s10-01.html">http://www.sfu.ca/policies/gazette/student/s10-01.html</a></p>",
      "requiredReading": "Your personalized Course Material list, including digital and physical textbooks, are available through the SFU Bookstore website by simply entering your Computing ID at: <a href="https://shop.sfu.ca/course-materials/my-personalized-course-materials">shop.sfu.ca/course-materials/my-personalized-course-materials</a>.",
      "short": undefined,
    },
    "number": "125",
    "prerequisites": "CMPT 120 or CMPT 130, with a minimum grade of C-.",
    "requirements": undefined,
    "schedule": Schedule [
      SchedulePart {
        "campus": "Burnaby",
        "days": [
          "Mo",
        ],
        "endDate": "Tue Dec 06 00:00:00 PST 2022",
        "endTime": "Tue Dec 06 00:00:00 PST 2022",
        "isExam": false,
        "sectionCode": "LEC",
        "startDate": "14:30",
        "startTime": "14:30",
      },
      SchedulePart {
        "campus": "Burnaby",
        "days": [
          "We",
        ],
        "endDate": "Tue Dec 06 00:00:00 PST 2022",
        "endTime": "Tue Dec 06 00:00:00 PST 2022",
        "isExam": false,
        "sectionCode": "LEC",
        "startDate": "14:30",
        "startTime": "14:30",
      },
    ],
    "section": "D100",
    "specialTopic": "",
    "term": "fall",
    "termName": "Fall 2022",
    "text": {
      "recommended": undefined,
      "required": undefined,
    },
    "title": "Introduction to Computing Science and Programming II",
    "type": "e",
    "units": "3",
    "year": 2022,
  },
  CourseSection {
    "corequisites": "",
    "degreeLevel": "UGRD",
    "deliveryMethod": "In Person",
    "department": "cmpt",
    "departmentName": "CMPT",
    "description": "A rigorous introduction to computing science and computer programming, suitable for students who already have some background in computing science and programming.  Intended for students who will major in computing science or a related program. Topics include: memory management; fundamental algorithms; formally analyzing the running time of algorithms; abstract data types and elementary data structures; object-oriented programming and software design; specification and program correctness; reading and writing files; debugging tools; shell commands.",
    "designation": "Quantitative",
    "details": undefined,
    "educationalGoals": undefined,
    "gradingScheme": undefined,
    "instructors": [],
    "internal": {
      "number": "5199",
      "outlinePath": "2022/fall/cmpt/125/d101",
    },
    "materials": undefined,
    "name": "CMPT 125 D101",
    "notes": {
      "departmentalUndergraduateNotes": "",
      "general": "Students with credit for CMPT 126, 129, 135 or CMPT 200 or higher may not take this course for further credit.",
      "grading": undefined,
      "registrar": "<p><strong>ACADEMIC INTEGRITY: YOUR WORK, YOUR SUCCESS</strong></p>
<p>SFU&rsquo;s Academic Integrity website <a href="http://www.sfu.ca/students/academicintegrity.html">http://www.sfu.ca/students/academicintegrity.html</a> is filled with information on what is meant by academic dishonesty, where you can find resources to help with your studies and the consequences of cheating. Check out the site for more information and videos that help explain the issues in plain English.</p>
<p>Each student is responsible for his or her conduct as it affects the university community. Academic dishonesty, in whatever form, is ultimately destructive of the values of the university. Furthermore, it is unfair and discouraging to the majority of students who pursue their studies honestly. Scholarly integrity is required of all members of the university. <a href="http://www.sfu.ca/policies/gazette/student/s10-01.html">http://www.sfu.ca/policies/gazette/student/s10-01.html</a></p>",
      "requiredReading": "Your personalized Course Material list, including digital and physical textbooks, are available through the SFU Bookstore website by simply entering your Computing ID at: <a href="https://shop.sfu.ca/course-materials/my-personalized-course-materials">shop.sfu.ca/course-materials/my-personalized-course-materials</a>.",
      "short": undefined,
    },
    "number": "125",
    "prerequisites": "CMPT 120 or CMPT 130, with a minimum grade of C-.",
    "requirements": undefined,
    "schedule": Schedule [
      SchedulePart {
        "campus": "Burnaby",
        "days": [
          "Th",
        ],
        "endDate": "Tue Dec 06 00:00:00 PST 2022",
        "endTime": "Tue Dec 06 00:00:00 PST 2022",
        "isExam": false,
        "sectionCode": "LAB",
        "startDate": "10:30",
        "startTime": "10:30",
      },
    ],
    "section": "D101",
    "specialTopic": "",
    "term": "fall",
    "termName": "Fall 2022",
    "text": {
      "recommended": undefined,
      "required": undefined,
    },
    "title": "Introduction to Computing Science and Programming II",
    "type": "n",
    "units": "3",
    "year": 2022,
  },
  CourseSection {
    "corequisites": "",
    "degreeLevel": "UGRD",
    "deliveryMethod": "In Person",
    "department": "cmpt",
    "departmentName": "CMPT",
    "description": "A rigorous introduction to computing science and computer programming, suitable for students who already have some background in computing science and programming.  Intended for students who will major in computing science or a related program. Topics include: memory management; fundamental algorithms; formally analyzing the running time of algorithms; abstract data types and elementary data structures; object-oriented programming and software design; specification and program correctness; reading and writing files; debugging tools; shell commands.",
    "designation": "Quantitative",
    "details": undefined,
    "educationalGoals": undefined,
    "gradingScheme": undefined,
    "instructors": [],
    "internal": {
      "number": "5200",
      "outlinePath": "2022/fall/cmpt/125/d102",
    },
    "materials": undefined,
    "name": "CMPT 125 D102",
    "notes": {
      "departmentalUndergraduateNotes": "",
      "general": "Students with credit for CMPT 126, 129, 135 or CMPT 200 or higher may not take this course for further credit.",
      "grading": undefined,
      "registrar": "<p><strong>ACADEMIC INTEGRITY: YOUR WORK, YOUR SUCCESS</strong></p>
<p>SFU&rsquo;s Academic Integrity website <a href="http://www.sfu.ca/students/academicintegrity.html">http://www.sfu.ca/students/academicintegrity.html</a> is filled with information on what is meant by academic dishonesty, where you can find resources to help with your studies and the consequences of cheating. Check out the site for more information and videos that help explain the issues in plain English.</p>
<p>Each student is responsible for his or her conduct as it affects the university community. Academic dishonesty, in whatever form, is ultimately destructive of the values of the university. Furthermore, it is unfair and discouraging to the majority of students who pursue their studies honestly. Scholarly integrity is required of all members of the university. <a href="http://www.sfu.ca/policies/gazette/student/s10-01.html">http://www.sfu.ca/policies/gazette/student/s10-01.html</a></p>",
      "requiredReading": "Your personalized Course Material list, including digital and physical textbooks, are available through the SFU Bookstore website by simply entering your Computing ID at: <a href="https://shop.sfu.ca/course-materials/my-personalized-course-materials">shop.sfu.ca/course-materials/my-personalized-course-materials</a>.",
      "short": undefined,
    },
    "number": "125",
    "prerequisites": "CMPT 120 or CMPT 130, with a minimum grade of C-.",
    "requirements": undefined,
    "schedule": Schedule [
      SchedulePart {
        "campus": "Burnaby",
        "days": [
          "Th",
        ],
        "endDate": "Tue Dec 06 00:00:00 PST 2022",
        "endTime": "Tue Dec 06 00:00:00 PST 2022",
        "isExam": false,
        "sectionCode": "LAB",
        "startDate": "10:30",
        "startTime": "10:30",
      },
    ],
    "section": "D102",
    "specialTopic": "",
    "term": "fall",
    "termName": "Fall 2022",
    "text": {
      "recommended": undefined,
      "required": undefined,
    },
    "title": "Introduction to Computing Science and Programming II",
    "type": "n",
    "units": "3",
    "year": 2022,
  },
  CourseSection {
    "corequisites": "",
    "degreeLevel": "UGRD",
    "deliveryMethod": "In Person",
    "department": "cmpt",
    "departmentName": "CMPT",
    "description": "A rigorous introduction to computing science and computer programming, suitable for students who already have some background in computing science and programming.  Intended for students who will major in computing science or a related program. Topics include: memory management; fundamental algorithms; formally analyzing the running time of algorithms; abstract data types and elementary data structures; object-oriented programming and software design; specification and program correctness; reading and writing files; debugging tools; shell commands.",
    "designation": "Quantitative",
    "details": undefined,
    "educationalGoals": undefined,
    "gradingScheme": undefined,
    "instructors": [],
    "internal": {
      "number": "5201",
      "outlinePath": "2022/fall/cmpt/125/d103",
    },
    "materials": undefined,
    "name": "CMPT 125 D103",
    "notes": {
      "departmentalUndergraduateNotes": "",
      "general": "Students with credit for CMPT 126, 129, 135 or CMPT 200 or higher may not take this course for further credit.",
      "grading": undefined,
      "registrar": "<p><strong>ACADEMIC INTEGRITY: YOUR WORK, YOUR SUCCESS</strong></p>
<p>SFU&rsquo;s Academic Integrity website <a href="http://www.sfu.ca/students/academicintegrity.html">http://www.sfu.ca/students/academicintegrity.html</a> is filled with information on what is meant by academic dishonesty, where you can find resources to help with your studies and the consequences of cheating. Check out the site for more information and videos that help explain the issues in plain English.</p>
<p>Each student is responsible for his or her conduct as it affects the university community. Academic dishonesty, in whatever form, is ultimately destructive of the values of the university. Furthermore, it is unfair and discouraging to the majority of students who pursue their studies honestly. Scholarly integrity is required of all members of the university. <a href="http://www.sfu.ca/policies/gazette/student/s10-01.html">http://www.sfu.ca/policies/gazette/student/s10-01.html</a></p>",
      "requiredReading": "Your personalized Course Material list, including digital and physical textbooks, are available through the SFU Bookstore website by simply entering your Computing ID at: <a href="https://shop.sfu.ca/course-materials/my-personalized-course-materials">shop.sfu.ca/course-materials/my-personalized-course-materials</a>.",
      "short": undefined,
    },
    "number": "125",
    "prerequisites": "CMPT 120 or CMPT 130, with a minimum grade of C-.",
    "requirements": undefined,
    "schedule": Schedule [
      SchedulePart {
        "campus": "Burnaby",
        "days": [
          "Th",
        ],
        "endDate": "Tue Dec 06 00:00:00 PST 2022",
        "endTime": "Tue Dec 06 00:00:00 PST 2022",
        "isExam": false,
        "sectionCode": "LAB",
        "startDate": "11:30",
        "startTime": "11:30",
      },
    ],
    "section": "D103",
    "specialTopic": "",
    "term": "fall",
    "termName": "Fall 2022",
    "text": {
      "recommended": undefined,
      "required": undefined,
    },
    "title": "Introduction to Computing Science and Programming II",
    "type": "n",
    "units": "3",
    "year": 2022,
  },
  CourseSection {
    "corequisites": "",
    "degreeLevel": "UGRD",
    "deliveryMethod": "In Person",
    "department": "cmpt",
    "departmentName": "CMPT",
    "description": "A rigorous introduction to computing science and computer programming, suitable for students who already have some background in computing science and programming.  Intended for students who will major in computing science or a related program. Topics include: memory management; fundamental algorithms; formally analyzing the running time of algorithms; abstract data types and elementary data structures; object-oriented programming and software design; specification and program correctness; reading and writing files; debugging tools; shell commands.",
    "designation": "Quantitative",
    "details": undefined,
    "educationalGoals": undefined,
    "gradingScheme": undefined,
    "instructors": [],
    "internal": {
      "number": "5202",
      "outlinePath": "2022/fall/cmpt/125/d104",
    },
    "materials": undefined,
    "name": "CMPT 125 D104",
    "notes": {
      "departmentalUndergraduateNotes": "",
      "general": "Students with credit for CMPT 126, 129, 135 or CMPT 200 or higher may not take this course for further credit.",
      "grading": undefined,
      "registrar": "<p><strong>ACADEMIC INTEGRITY: YOUR WORK, YOUR SUCCESS</strong></p>
<p>SFU&rsquo;s Academic Integrity website <a href="http://www.sfu.ca/students/academicintegrity.html">http://www.sfu.ca/students/academicintegrity.html</a> is filled with information on what is meant by academic dishonesty, where you can find resources to help with your studies and the consequences of cheating. Check out the site for more information and videos that help explain the issues in plain English.</p>
<p>Each student is responsible for his or her conduct as it affects the university community. Academic dishonesty, in whatever form, is ultimately destructive of the values of the university. Furthermore, it is unfair and discouraging to the majority of students who pursue their studies honestly. Scholarly integrity is required of all members of the university. <a href="http://www.sfu.ca/policies/gazette/student/s10-01.html">http://www.sfu.ca/policies/gazette/student/s10-01.html</a></p>",
      "requiredReading": "Your personalized Course Material list, including digital and physical textbooks, are available through the SFU Bookstore website by simply entering your Computing ID at: <a href="https://shop.sfu.ca/course-materials/my-personalized-course-materials">shop.sfu.ca/course-materials/my-personalized-course-materials</a>.",
      "short": undefined,
    },
    "number": "125",
    "prerequisites": "CMPT 120 or CMPT 130, with a minimum grade of C-.",
    "requirements": undefined,
    "schedule": Schedule [
      SchedulePart {
        "campus": "Burnaby",
        "days": [
          "Th",
        ],
        "endDate": "Tue Dec 06 00:00:00 PST 2022",
        "endTime": "Tue Dec 06 00:00:00 PST 2022",
        "isExam": false,
        "sectionCode": "LAB",
        "startDate": "11:30",
        "startTime": "11:30",
      },
    ],
    "section": "D104",
    "specialTopic": "",
    "term": "fall",
    "termName": "Fall 2022",
    "text": {
      "recommended": undefined,
      "required": undefined,
    },
    "title": "Introduction to Computing Science and Programming II",
    "type": "n",
    "units": "3",
    "year": 2022,
  },
  CourseSection {
    "corequisites": "",
    "degreeLevel": "UGRD",
    "deliveryMethod": "In Person",
    "department": "cmpt",
    "departmentName": "CMPT",
    "description": "A rigorous introduction to computing science and computer programming, suitable for students who already have some background in computing science and programming.  Intended for students who will major in computing science or a related program. Topics include: memory management; fundamental algorithms; formally analyzing the running time of algorithms; abstract data types and elementary data structures; object-oriented programming and software design; specification and program correctness; reading and writing files; debugging tools; shell commands.",
    "designation": "Quantitative",
    "details": undefined,
    "educationalGoals": undefined,
    "gradingScheme": undefined,
    "instructors": [],
    "internal": {
      "number": "5203",
      "outlinePath": "2022/fall/cmpt/125/d105",
    },
    "materials": undefined,
    "name": "CMPT 125 D105",
    "notes": {
      "departmentalUndergraduateNotes": "",
      "general": "Students with credit for CMPT 126, 129, 135 or CMPT 200 or higher may not take this course for further credit.",
      "grading": undefined,
      "registrar": "<p><strong>ACADEMIC INTEGRITY: YOUR WORK, YOUR SUCCESS</strong></p>
<p>SFU&rsquo;s Academic Integrity website <a href="http://www.sfu.ca/students/academicintegrity.html">http://www.sfu.ca/students/academicintegrity.html</a> is filled with information on what is meant by academic dishonesty, where you can find resources to help with your studies and the consequences of cheating. Check out the site for more information and videos that help explain the issues in plain English.</p>
<p>Each student is responsible for his or her conduct as it affects the university community. Academic dishonesty, in whatever form, is ultimately destructive of the values of the university. Furthermore, it is unfair and discouraging to the majority of students who pursue their studies honestly. Scholarly integrity is required of all members of the university. <a href="http://www.sfu.ca/policies/gazette/student/s10-01.html">http://www.sfu.ca/policies/gazette/student/s10-01.html</a></p>",
      "requiredReading": "Your personalized Course Material list, including digital and physical textbooks, are available through the SFU Bookstore website by simply entering your Computing ID at: <a href="https://shop.sfu.ca/course-materials/my-personalized-course-materials">shop.sfu.ca/course-materials/my-personalized-course-materials</a>.",
      "short": undefined,
    },
    "number": "125",
    "prerequisites": "CMPT 120 or CMPT 130, with a minimum grade of C-.",
    "requirements": undefined,
    "schedule": Schedule [
      SchedulePart {
        "campus": "Burnaby",
        "days": [
          "Th",
        ],
        "endDate": "Tue Dec 06 00:00:00 PST 2022",
        "endTime": "Tue Dec 06 00:00:00 PST 2022",
        "isExam": false,
        "sectionCode": "LAB",
        "startDate": "12:30",
        "startTime": "12:30",
      },
    ],
    "section": "D105",
    "specialTopic": "",
    "term": "fall",
    "termName": "Fall 2022",
    "text": {
      "recommended": undefined,
      "required": undefined,
    },
    "title": "Introduction to Computing Science and Programming II",
    "type": "n",
    "units": "3",
    "year": 2022,
  },
  CourseSection {
    "corequisites": "",
    "degreeLevel": "UGRD",
    "deliveryMethod": "In Person",
    "department": "cmpt",
    "departmentName": "CMPT",
    "description": "A rigorous introduction to computing science and computer programming, suitable for students who already have some background in computing science and programming.  Intended for students who will major in computing science or a related program. Topics include: memory management; fundamental algorithms; formally analyzing the running time of algorithms; abstract data types and elementary data structures; object-oriented programming and software design; specification and program correctness; reading and writing files; debugging tools; shell commands.",
    "designation": "Quantitative",
    "details": undefined,
    "educationalGoals": undefined,
    "gradingScheme": undefined,
    "instructors": [],
    "internal": {
      "number": "5204",
      "outlinePath": "2022/fall/cmpt/125/d106",
    },
    "materials": undefined,
    "name": "CMPT 125 D106",
    "notes": {
      "departmentalUndergraduateNotes": "",
      "general": "Students with credit for CMPT 126, 129, 135 or CMPT 200 or higher may not take this course for further credit.",
      "grading": undefined,
      "registrar": "<p><strong>ACADEMIC INTEGRITY: YOUR WORK, YOUR SUCCESS</strong></p>
<p>SFU&rsquo;s Academic Integrity website <a href="http://www.sfu.ca/students/academicintegrity.html">http://www.sfu.ca/students/academicintegrity.html</a> is filled with information on what is meant by academic dishonesty, where you can find resources to help with your studies and the consequences of cheating. Check out the site for more information and videos that help explain the issues in plain English.</p>
<p>Each student is responsible for his or her conduct as it affects the university community. Academic dishonesty, in whatever form, is ultimately destructive of the values of the university. Furthermore, it is unfair and discouraging to the majority of students who pursue their studies honestly. Scholarly integrity is required of all members of the university. <a href="http://www.sfu.ca/policies/gazette/student/s10-01.html">http://www.sfu.ca/policies/gazette/student/s10-01.html</a></p>",
      "requiredReading": "Your personalized Course Material list, including digital and physical textbooks, are available through the SFU Bookstore website by simply entering your Computing ID at: <a href="https://shop.sfu.ca/course-materials/my-personalized-course-materials">shop.sfu.ca/course-materials/my-personalized-course-materials</a>.",
      "short": undefined,
    },
    "number": "125",
    "prerequisites": "CMPT 120 or CMPT 130, with a minimum grade of C-.",
    "requirements": undefined,
    "schedule": Schedule [
      SchedulePart {
        "campus": "Burnaby",
        "days": [
          "Th",
        ],
        "endDate": "Tue Dec 06 00:00:00 PST 2022",
        "endTime": "Tue Dec 06 00:00:00 PST 2022",
        "isExam": false,
        "sectionCode": "LAB",
        "startDate": "12:30",
        "startTime": "12:30",
      },
    ],
    "section": "D106",
    "specialTopic": "",
    "term": "fall",
    "termName": "Fall 2022",
    "text": {
      "recommended": undefined,
      "required": undefined,
    },
    "title": "Introduction to Computing Science and Programming II",
    "type": "n",
    "units": "3",
    "year": 2022,
  },
  CourseSection {
    "corequisites": "",
    "degreeLevel": "UGRD",
    "deliveryMethod": "In Person",
    "department": "cmpt",
    "departmentName": "CMPT",
    "description": "A rigorous introduction to computing science and computer programming, suitable for students who already have some background in computing science and programming.  Intended for students who will major in computing science or a related program. Topics include: memory management; fundamental algorithms; formally analyzing the running time of algorithms; abstract data types and elementary data structures; object-oriented programming and software design; specification and program correctness; reading and writing files; debugging tools; shell commands.",
    "designation": "Quantitative",
    "details": undefined,
    "educationalGoals": undefined,
    "gradingScheme": undefined,
    "instructors": [],
    "internal": {
      "number": "5205",
      "outlinePath": "2022/fall/cmpt/125/d107",
    },
    "materials": undefined,
    "name": "CMPT 125 D107",
    "notes": {
      "departmentalUndergraduateNotes": "",
      "general": "Students with credit for CMPT 126, 129, 135 or CMPT 200 or higher may not take this course for further credit.",
      "grading": undefined,
      "registrar": "<p><strong>ACADEMIC INTEGRITY: YOUR WORK, YOUR SUCCESS</strong></p>
<p>SFU&rsquo;s Academic Integrity website <a href="http://www.sfu.ca/students/academicintegrity.html">http://www.sfu.ca/students/academicintegrity.html</a> is filled with information on what is meant by academic dishonesty, where you can find resources to help with your studies and the consequences of cheating. Check out the site for more information and videos that help explain the issues in plain English.</p>
<p>Each student is responsible for his or her conduct as it affects the university community. Academic dishonesty, in whatever form, is ultimately destructive of the values of the university. Furthermore, it is unfair and discouraging to the majority of students who pursue their studies honestly. Scholarly integrity is required of all members of the university. <a href="http://www.sfu.ca/policies/gazette/student/s10-01.html">http://www.sfu.ca/policies/gazette/student/s10-01.html</a></p>",
      "requiredReading": "Your personalized Course Material list, including digital and physical textbooks, are available through the SFU Bookstore website by simply entering your Computing ID at: <a href="https://shop.sfu.ca/course-materials/my-personalized-course-materials">shop.sfu.ca/course-materials/my-personalized-course-materials</a>.",
      "short": undefined,
    },
    "number": "125",
    "prerequisites": "CMPT 120 or CMPT 130, with a minimum grade of C-.",
    "requirements": undefined,
    "schedule": Schedule [
      SchedulePart {
        "campus": "Burnaby",
        "days": [
          "Th",
        ],
        "endDate": "Tue Dec 06 00:00:00 PST 2022",
        "endTime": "Tue Dec 06 00:00:00 PST 2022",
        "isExam": false,
        "sectionCode": "LAB",
        "startDate": "13:30",
        "startTime": "13:30",
      },
    ],
    "section": "D107",
    "specialTopic": "",
    "term": "fall",
    "termName": "Fall 2022",
    "text": {
      "recommended": undefined,
      "required": undefined,
    },
    "title": "Introduction to Computing Science and Programming II",
    "type": "n",
    "units": "3",
    "year": 2022,
  },
  CourseSection {
    "corequisites": "",
    "degreeLevel": "UGRD",
    "deliveryMethod": "In Person",
    "department": "cmpt",
    "departmentName": "CMPT",
    "description": "A rigorous introduction to computing science and computer programming, suitable for students who already have some background in computing science and programming.  Intended for students who will major in computing science or a related program. Topics include: memory management; fundamental algorithms; formally analyzing the running time of algorithms; abstract data types and elementary data structures; object-oriented programming and software design; specification and program correctness; reading and writing files; debugging tools; shell commands.",
    "designation": "Quantitative",
    "details": undefined,
    "educationalGoals": undefined,
    "gradingScheme": undefined,
    "instructors": [],
    "internal": {
      "number": "5206",
      "outlinePath": "2022/fall/cmpt/125/d108",
    },
    "materials": undefined,
    "name": "CMPT 125 D108",
    "notes": {
      "departmentalUndergraduateNotes": "",
      "general": "Students with credit for CMPT 126, 129, 135 or CMPT 200 or higher may not take this course for further credit.",
      "grading": undefined,
      "registrar": "<p><strong>ACADEMIC INTEGRITY: YOUR WORK, YOUR SUCCESS</strong></p>
<p>SFU&rsquo;s Academic Integrity website <a href="http://www.sfu.ca/students/academicintegrity.html">http://www.sfu.ca/students/academicintegrity.html</a> is filled with information on what is meant by academic dishonesty, where you can find resources to help with your studies and the consequences of cheating. Check out the site for more information and videos that help explain the issues in plain English.</p>
<p>Each student is responsible for his or her conduct as it affects the university community. Academic dishonesty, in whatever form, is ultimately destructive of the values of the university. Furthermore, it is unfair and discouraging to the majority of students who pursue their studies honestly. Scholarly integrity is required of all members of the university. <a href="http://www.sfu.ca/policies/gazette/student/s10-01.html">http://www.sfu.ca/policies/gazette/student/s10-01.html</a></p>",
      "requiredReading": "Your personalized Course Material list, including digital and physical textbooks, are available through the SFU Bookstore website by simply entering your Computing ID at: <a href="https://shop.sfu.ca/course-materials/my-personalized-course-materials">shop.sfu.ca/course-materials/my-personalized-course-materials</a>.",
      "short": undefined,
    },
    "number": "125",
    "prerequisites": "CMPT 120 or CMPT 130, with a minimum grade of C-.",
    "requirements": undefined,
    "schedule": Schedule [
      SchedulePart {
        "campus": "Burnaby",
        "days": [
          "Th",
        ],
        "endDate": "Tue Dec 06 00:00:00 PST 2022",
        "endTime": "Tue Dec 06 00:00:00 PST 2022",
        "isExam": false,
        "sectionCode": "LAB",
        "startDate": "13:30",
        "startTime": "13:30",
      },
    ],
    "section": "D108",
    "specialTopic": "",
    "term": "fall",
    "termName": "Fall 2022",
    "text": {
      "recommended": undefined,
      "required": undefined,
    },
    "title": "Introduction to Computing Science and Programming II",
    "type": "n",
    "units": "3",
    "year": 2022,
  },
]
`;

exports[`course get course section 1`] = `
CourseSection {
  "corequisites": "",
  "degreeLevel": "UGRD",
  "deliveryMethod": "In Person",
  "department": "cmpt",
  "departmentName": "CMPT",
  "description": "A rigorous introduction to computing science and computer programming, suitable for students who already have some background in computing science and programming.  Intended for students who will major in computing science or a related program. Topics include: memory management; fundamental algorithms; formally analyzing the running time of algorithms; abstract data types and elementary data structures; object-oriented programming and software design; specification and program correctness; reading and writing files; debugging tools; shell commands.",
  "designation": "Quantitative",
  "details": "This course is a rigorous introduction to computing science, intended primarily for students who have already taken CMPT 120 as an introduction to algorithms and programming. Students will learn fundamental concepts of computing science, basic principles of algorithm design and software development. All case studies will be presented in C and C++. Students will also learn the basic shell commands in Linux, and will learn how to run and debug their code using VS Cod
<h2 class="ParagraphTitle">Topics</h2>
<ul>
<li>Brief review of elementary programming and problem solving; introduction to C.</li>
<li>Basic shell commands in Linux</li>
<li>Running/Debugging using Visual Studio Code</li>
<li>Performance measurements; algorithm design and analysis; asymptotics; fundamental algorithms.</li>
<li>Encodings of basic types: int, unsigned, float, char, pointer.</li>
<li>The memory model: addresses, dynamic data types, safe initialization, safe cleanup, and safe arrays.</li>
<li>Good coding style; defensive coding practices; testing.</li>
<li>Recursion: simple recursion; recursion on trees; divide and conquer algorithms.</li>
<li>Reasoning about programs: assertions, invariants, and correctness.</li>
<li>Abstract data types; information hiding;</li>
<li>Elementary data structures: stacks, queues, binary trees</li>
</ul>",
  "educationalGoals": undefined,
  "gradingScheme": undefined,
  "instructors": [
    Instructor {
      "commonName": "Igor",
      "email": "ishinkar@sfu.ca",
      "firstName": "Igor",
      "lastName": "Shinkar",
      "name": "Igor Shinkar",
      "office": "",
      "officeHours": "",
      "phone": "",
      "profileUrl": "",
      "role": "PI",
    },
  ],
  "internal": {
    "number": "5198",
    "outlinePath": "2022/fall/cmpt/125/d100",
  },
  "materials": undefined,
  "name": "CMPT 125 D100",
  "notes": {
    "departmentalUndergraduateNotes": "",
    "general": "Students with credit for CMPT 126, 129, 135 or CMPT 200 or higher may not take this course for further credit.",
    "grading": "Final Exam - 35% Lab Exam - 20% Midterm Exam - 20% Homework assignments - 25%",
    "registrar": "<p><strong>ACADEMIC INTEGRITY: YOUR WORK, YOUR SUCCESS</strong></p>
<p>SFU&rsquo;s Academic Integrity website <a href="http://www.sfu.ca/students/academicintegrity.html">http://www.sfu.ca/students/academicintegrity.html</a> is filled with information on what is meant by academic dishonesty, where you can find resources to help with your studies and the consequences of cheating. Check out the site for more information and videos that help explain the issues in plain English.</p>
<p>Each student is responsible for his or her conduct as it affects the university community. Academic dishonesty, in whatever form, is ultimately destructive of the values of the university. Furthermore, it is unfair and discouraging to the majority of students who pursue their studies honestly. Scholarly integrity is required of all members of the university. <a href="http://www.sfu.ca/policies/gazette/student/s10-01.html">http://www.sfu.ca/policies/gazette/student/s10-01.html</a></p>",
    "requiredReading": "Your personalized Course Material list, including digital and physical textbooks, are available through the SFU Bookstore website by simply entering your Computing ID at: <a href="https://shop.sfu.ca/course-materials/my-personalized-course-materials">shop.sfu.ca/course-materials/my-personalized-course-materials</a>.",
    "short": undefined,
  },
  "number": "125",
  "prerequisites": "CMPT 120 or CMPT 130, with a minimum grade of C-.",
  "requirements": undefined,
  "schedule": Schedule [
    SchedulePart {
      "campus": "Burnaby",
      "days": [
        "Mo",
      ],
      "endDate": "Tue Dec 06 00:00:00 PST 2022",
      "endTime": "Tue Dec 06 00:00:00 PST 2022",
      "isExam": false,
      "sectionCode": "LEC",
      "startDate": "14:30",
      "startTime": "14:30",
    },
    SchedulePart {
      "campus": "Burnaby",
      "days": [
        "We",
      ],
      "endDate": "Tue Dec 06 00:00:00 PST 2022",
      "endTime": "Tue Dec 06 00:00:00 PST 2022",
      "isExam": false,
      "sectionCode": "LEC",
      "startDate": "14:30",
      "startTime": "14:30",
    },
  ],
  "section": "D100",
  "specialTopic": "",
  "term": "fall",
  "termName": "Fall 2022",
  "text": {
    "recommended": undefined,
    "required": undefined,
  },
  "title": "Introduction to Computing Science and Programming II",
  "type": "e",
  "units": "3",
  "year": 2022,
}
`;

exports[`course request cmpt 125 fall 2022 1`] = `
Course {
  "corequisites": "",
  "courseSectionSummaries": [
    {
      "associatedCourse": "1",
      "section": "d100",
      "sectionCode": "LEC",
      "sectionName": "D100",
      "status": "a",
      "type": "lecture",
    },
    {
      "associatedCourse": "1",
      "section": "d101",
      "sectionCode": "LAB",
      "sectionName": "D101",
      "status": "a",
      "type": "lab",
    },
    {
      "associatedCourse": "1",
      "section": "d102",
      "sectionCode": "LAB",
      "sectionName": "D102",
      "status": "a",
      "type": "lab",
    },
    {
      "associatedCourse": "1",
      "section": "d103",
      "sectionCode": "LAB",
      "sectionName": "D103",
      "status": "a",
      "type": "lab",
    },
    {
      "associatedCourse": "1",
      "section": "d104",
      "sectionCode": "LAB",
      "sectionName": "D104",
      "status": "a",
      "type": "lab",
    },
    {
      "associatedCourse": "1",
      "section": "d105",
      "sectionCode": "LAB",
      "sectionName": "D105",
      "status": "a",
      "type": "lab",
    },
    {
      "associatedCourse": "1",
      "section": "d106",
      "sectionCode": "LAB",
      "sectionName": "D106",
      "status": "a",
      "type": "lab",
    },
    {
      "associatedCourse": "1",
      "section": "d107",
      "sectionCode": "LAB",
      "sectionName": "D107",
      "status": "a",
      "type": "lab",
    },
    {
      "associatedCourse": "1",
      "section": "d108",
      "sectionCode": "LAB",
      "sectionName": "D108",
      "status": "a",
      "type": "lab",
    },
  ],
  "courseSections": {
    "d100": undefined,
    "d101": undefined,
    "d102": undefined,
    "d103": undefined,
    "d104": undefined,
    "d105": undefined,
    "d106": undefined,
    "d107": undefined,
    "d108": undefined,
  },
  "department": "cmpt",
  "description": "A rigorous introduction to computing science and computer programming, suitable for students who already have some background in computing science and programming. Intended for students who will major in computing science or a related program. Topics include: memory management; fundamental algorithms; formally analyzing the running time of algorithms; abstract data types and elementary data structures; object-oriented programming and software design; specification and program correctness; reading and writing files; debugging tools; shell commands. Prerequisite: CMPT 120 or CMPT 130, with a minimum grade of C-. Students with credit for CMPT 126, 129, 135 or CMPT 200 or higher may not take this course for further credit. Quantitative.",
  "designation": "Quantitative",
  "notes": {
    "general": "Students with credit for CMPT 126, 129, 135 or CMPT 200 or higher may not take this course for further credit.",
  },
  "number": "125",
  "prerequisites": "Prerequisite: CMPT 120 or CMPT 130, with a minimum grade of C-.",
  "recommended": "",
  "term": "fall",
  "title": "Introduction to Computing Science and Programming II",
  "units": "3",
  "year": 2022,
}
`;
